<resources>
    <string name="app_name">HRIS MOBILE</string>
    <string name="greeting_header">HELLO, EGA!</string>
    <string name="staff_mis">STAFF MIS</string>
    <string name="search_nik">Search NIK</string>
    <string name="dev_ops">DEV OPS</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="id">Id</string>
    <string name="getting_data_from_server">GETTING DATA FROM SERVER...</string>
    <string name="time_in">TIME IN</string>
    <string name="time_out">TIME OUT</string>
    <string name="posisi">POSISI</string>
    <string name="strip">-</string>
    <string name="dept">DEPT</string>
    <string name="nik">NIK</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">username</string>
    <string name="prompt_password">password</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="human_resource_information_sytem">HUMAN RESOURCE\nINFORMATION SYTEM</string>
    <string name="hari">HARI</string>
    <string name="tanggal">TANGGAL</string>
    <string name="todo">TODO</string>
    <string name="logo_hris">LOGO HRIS</string>
    <string name="fab_logout">FAB LOGOUT</string>
    <string name="fab_exit_app">FAB EXIT APP</string>
    <string name="fab_main">FAB MAIN</string>
    <string name="autentikasi">autentikasi...</string>
    <string name="fab_payroll">FAB PAYROLL</string>
    <string name="periode">Periode</string>
    <string name="payroll">Payroll</string>
    <string name="attendance">Attendance</string>
    <string name="toggle_flashlight">Toggle Flashlight</string>
    <string name="titikdua">:</string>
    <string name="umk">Umk</string>
    <string name="tunjangan_jabatan">Tunjangan jabatan</string>
    <string name="tunjangan_keterampilan">Tunjangan keterampilan</string>
    <string name="tunjangan_utility">Tunjangan utility</string>
    <string name="tunjangan_shift_2">Tunjangan shift 2</string>
    <string name="tunjangan_shift_3">Tunjangan shift 3</string>
    <string name="lembur_1">Lembur 1</string>
    <string name="lembur_2">Lembur 2</string>
    <string name="lembur_3">Lembur 3</string>
    <string name="lembur_4">Lembur 4</string>
    <string name="bpjs_kesehatan">BPJS kesehatan</string>
    <string name="bpjs_ketenagakerjaan">BPJS ketenagakerjaan</string>
    <string name="keanggotaan_koperasi">Keanggotaan koperasi</string>
    <string name="potongan_koperasi">Potongan koperasi</string>
    <string name="total_potongan">Total potongan</string>
    <string name="total_pendapatan">Total pendapatan</string>
    <string name="gaji_terima">Gaji terima</string>
    <string name="potongan">Potongan</string>
    <string name="rp">"Rp. "</string>
    <string name="dashboard">Dashboard</string>
    <string name="greeting">Wellcome, Ega!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_lembur">DATA LEMBUR</string>
    <string name="idl">idl</string>
    <string name="spl">spl</string>
    <string name="date">21-01-1999</string>
    <string name="start">12:00:00</string>
    <string name="end">15:00:00</string>
    <string name="status">Status</string>
    <string name="remark">remark</string>
    <string name="lembur">Lembur</string>
    <string name="profile">Profile</string>
    <string name="rekap_koperasi">Rekap koperasi</string>
    <string name="rekap_cuti">Rekap cuti</string>
    <string name="rekap_spl">Rekap SPL</string>
    <string name="navigation_drawer">NAVIGATION DRAWER</string>
    <string name="navigation_drawer_open">open\n</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="departemen">Departemen</string>
    <string name="divisi">Divisi</string>
    <string name="workgroup">Work group</string>
    <string name="workstatus">Work status</string>
    <string name="start_contract">Start contract</string>
    <string name="end_contract">End contract</string>
    <string name="work_status">Work status</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="address">Address</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="employee_status">Employee status</string>
    <string name="switch_mode">Switch mode</string>
    <string name="hello">Hello</string>
    <string name="credit">if you see this, then you are one of the lucky ones to have found this hidden page. thanks for using this app, if you are the one who continues this project, keep up the good work, you can do it!</string>
</resources>