<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/name" />

            <TextView
                android:id="@+id/nikTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/nik" />

            <TextView
                android:id="@+id/positionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/posisi" />

            <TextView
                android:id="@+id/deptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/dept" />

            <TextView
                android:id="@+id/tinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/time_in" />

            <TextView
                android:id="@+id/toutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/time_out" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
