<!-- item_your_data.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp"
    style="@style/customcard"
    android:id="@+id/cardspl"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idlspl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                style="@style/customstyle"
                android:text="@string/idl"
                android:hint="@string/idl"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/splspl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/customstyle"
                android:text="@string/spl"
                android:textAllCaps="true"
                android:hint="@string/spl"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/remarkspl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/customstyle"
                android:text="@string/remark"
                android:hint="@string/remark"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/datespl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/customstyle"
                android:text="@string/date"
                android:hint="@string/date"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/startspl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/customstyle"
                android:gravity="center"
                android:text="@string/start"
                android:hint="@string/start"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/endspl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/customstyle"
                android:gravity="center"
                android:text="@string/end"
                android:hint="@string/end"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="0dp"
                app:cardCornerRadius="15dp"
                android:id="@+id/cardstatusspl">

                <TextView
                    android:id="@+id/statusspl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/customstyle"
                    android:gravity="center"
                    android:text="@string/status"
                    android:hint="@string/status"
                    android:textSize="13sp"
                    android:textStyle="bold|italic" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
