<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:layout_below="@id/tvId"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tvPosisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@id/tvNama"
            />
    </RelativeLayout>
    <View
        android:background="@color/blueMIS"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"/>
</LinearLayout>