<!-- item_your_data.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="15dp"
    style="@style/customstyle"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customstyle"
            android:text="@string/hari"
            android:hint="@string/hari"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customstyle"
            android:text="@string/tanggal"
            android:hint="@string/tanggal"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#009688"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/time_in"
                android:textSize="17sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#F44336"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textColor="@color/white"
                android:text="@string/time_out"
                android:textSize="17sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>
