<!-- item_your_data.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp"
    style="@style/customcard"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customstyle"
            android:text="@string/hari"
            android:hint="@string/hari"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customstyle"
            android:text="@string/tanggal"
            android:hint="@string/tanggal"
            android:textSize="13sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#B3009688"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/time_in"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#B3F44336"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/time_out"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
