<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:gravity="center_vertical"
            android:paddingVertical="20dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            style="@style/customstyleheader"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                style="@style/logo_hris"
                android:contentDescription="@string/logo_hris" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/main_title_header"
                android:gravity="start"
                android:textSize="18sp"
                android:maxLines="1"
                android:textStyle="bold|italic"
                android:text="@string/app_name" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:iconifiedByDefault="false"
                app:queryHint="Search by Date..." />

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/recylelayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:id="@+id/loading">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loadtext"
                            android:gravity="center"
                            android:hint="@string/getting_data_from_server"
                            style="@style/customstyle"
                            android:textSize="16sp"
                            android:textStyle="bold|italic"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:scrollbars="vertical"
                        android:id="@+id/recyclerView">

                    </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/fab_main"
            app:elevation="0dp"
            app:rippleColor="@color/white"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_add"
            style="@style/customfab"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/fab_logout"
            app:elevation="0dp"
            app:rippleColor="@color/white"
            app:srcCompat="@drawable/ic_sign_out"
            android:layout_above="@id/fab_main"
            android:visibility="gone"
            style="@style/customfab"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/fab_exit_app"
            app:elevation="0dp"
            app:rippleColor="@color/white"
            android:layout_above="@id/fab_option1"
            app:srcCompat="@drawable/ic_exit"
            android:visibility="gone"
            style="@style/customfab"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>