<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendance.Attendance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:gravity="center_vertical"
            android:paddingVertical="20dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            style="@style/customstyleheader"
            tools:ignore="UseCompoundDrawables">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    style="@style/logo_hris"
                    android:contentDescription="@string/logo_hris" />

                <TextView
                    android:id="@+id/main_subtitle_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/payroll"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/main_title_header"
                android:gravity="start"
                android:textSize="18sp"
                android:maxLines="1"
                android:textStyle="bold|italic"
                android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="20dp"
            style="@style/customstyleheader"
            android:orientation="vertical"
            android:id="@+id/loading_detail_payroll">

            <ScrollView
                android:id="@+id/scrollview_detail_payroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/base_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/payroll_detail_group"/>

                </LinearLayout>

            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loadtext_detail_payroll"
                android:gravity="center"
                android:hint="@string/getting_data_from_server"
                style="@style/customstyle"
                android:textSize="16sp"
                android:textStyle="bold|italic"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>